# flutter_xlog

./: .gitignore  .pubignore  CHANGELOG.md  LICENSE  NOTICE  PUBLISHING.md  README.md  README_CN.md  README_EN.md  pubspec.yaml
.codex/plan/: 2026-06-11-flutter-xlog-pubdev.md
android/: build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  xlog_bridge.cpp  xlog_bridge.h
build_tools/: LOCAL_BUILD.md  LOCAL_BUILD_EN.md  build_flutter_xlog.sh  build_mars_xlog.sh  mars_formatter_patch.conf  patch_mars_formatter.py
build_tools/cmake/android_bridge/: CMakeLists.txt
build_tools/cmake/android_xlog_minimal/: CMakeLists.txt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/flutter_xlog_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/test/: widget_test.dart
ios/: flutter_xlog.podspec  flutter_xlog_ffi.podspec
ios/Classes/: xlog_bridge.h  xlog_bridge.mm
ios/Frameworks/flutter_xlog.xcframework/: Info.plist
ios/Frameworks/flutter_xlog.xcframework/ios-arm64/flutter_xlog.framework/: Info.plist  flutter_xlog
ios/Frameworks/flutter_xlog.xcframework/ios-arm64_x86_64-simulator/flutter_xlog.framework/: Info.plist  flutter_xlog
ios/Frameworks/flutter_xlog.xcframework/ios-arm64_x86_64-simulator/flutter_xlog.framework/Modules/: module.modulemap
lib/: flutter_xlog_ffi.dart
lib/src/: flutter_xlog_ffi.dart
